ENH: added column "cancer" in REMC design matrix

--- a/notebooks/derive_remc_metadata.ipynb
+++ b/notebooks/derive_remc_metadata.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -56,8 +58,8 @@
     "\n",
     "def derive_design_matrix(table):\n",
     "    biotypes = sorted(table['biotype'].unique())\n",
-    "    num_cols = 3 + len(biotypes)\n",
-    "    col_names = ['sex_Male', 'sex_Female', 'sex_Other']\n",
+    "    num_cols = 4 + len(biotypes)\n",
+    "    col_names = ['sex_Male', 'sex_Female', 'sex_Other', 'cancer']\n",
     "    for bt in biotypes:\n",
     "        col_names.append('biotype_' + bt)\n",
     "    anatomy = sorted(table['anatomy'].unique())\n",
@@ -74,6 +76,8 @@
     "            design.loc[row.EID, 'sex_Other'] = 1\n",
     "        design.loc[row.EID, 'biotype_' + row.biotype] = 1\n",
     "        design.loc[row.EID, 'anatomy_' + row.anatomy] = 1\n",
+    "        if row.mnemonic.endswith('CNCR'):\n",
+    "            design.loc[row.EID, 'cancer'] = 1\n",
     "    return design\n",
     "\n",
     "\n",
