ENH: current version of REMC notebooks for loading

--- a/notebooks/utils/derive_remc_metadata.ipynb
+++ b/notebooks/utils/derive_remc_metadata.ipynb
@@ -2,13 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os as os\n",
     "import io as io\n",
     "\n",
@@ -58,8 +55,8 @@
     "\n",
     "def derive_design_matrix(table):\n",
     "    biotypes = sorted(table['biotype'].unique())\n",
-    "    num_cols = 4 + len(biotypes)\n",
-    "    col_names = ['sex_Male', 'sex_Female', 'sex_Other', 'cancer']\n",
+    "    num_cols = 5 + len(biotypes)\n",
+    "    col_names = ['sex_Male', 'sex_Female', 'sex_Other', 'phenotype_normal', 'phenotype_cancer']\n",
     "    for bt in biotypes:\n",
     "        col_names.append('biotype_' + bt)\n",
     "    anatomy = sorted(table['anatomy'].unique())\n",
@@ -77,7 +74,9 @@
     "        design.loc[row.EID, 'biotype_' + row.biotype] = 1\n",
     "        design.loc[row.EID, 'anatomy_' + row.anatomy] = 1\n",
     "        if row.mnemonic.endswith('CNCR'):\n",
-    "            design.loc[row.EID, 'cancer'] = 1\n",
+    "            design.loc[row.EID, 'phenotype_cancer'] = 1\n",
+    "        else:\n",
+    "            design.loc[row.EID, 'phenotype_normal'] = 1\n",
     "    return design\n",
     "\n",
     "\n",
@@ -85,10 +84,7 @@
     "dm = derive_design_matrix(md)\n",
     "\n",
     "md.to_csv(remc_clean, sep='\\t', index=False)\n",
-    "dm.to_csv(remc_design, sep='\\t', index_label='EID')\n",
-    "\n",
-    "\n",
-    "\n"
+    "dm.to_csv(remc_design, sep='\\t', index_label='EID')"
    ]
   }
  ],
@@ -101,7 +97,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
