--- a/notebooks/utils/load_remc_data.ipynb
+++ b/notebooks/utils/load_remc_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,12 @@
        "True"
       ]
      },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6,
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
-    "\n",
     "import os as os\n",
     "\n",
     "from bs4 import BeautifulSoup as bsoup\n",
@@ -40,7 +39,7 @@
     "dl_subdirs = {'/css': 'state_seg', '/dnase_narrow': 'dnase_peaks',\n",
     "              '/hist_narrow': 'hist_peaks', '/hist_broad': 'hist_peaks'}\n",
     "\n",
-    "dl_ext = {'/css': '18state.bed.gz', '/dnase_narrow': 'macs2.npeak.gz',\n",
+    "dl_ext = {'/css': 'segments.bed', '/dnase_narrow': 'macs2.npeak.gz',\n",
     "          '/hist_narrow': 'macs2.npeak.gz', '/hist_broad': 'macs2.bpeak.gz'}\n",
     "\n",
     "cache_file = os.path.join(repo_base, 'annotation', 'remc_cache.h5')\n",
@@ -88,7 +87,7 @@
     "            load_url = os.path.join(base_url, item)\n",
     "            eid, remain = item.split('_', 1)\n",
     "            lib, _ = remain.split('.', 1)\n",
-    "            collector.append([eid, 'segmentation', file_ext, load_url])\n",
+    "            collector.append([eid, '18state', file_ext, load_url])\n",
     "    df = pd.DataFrame(collector, columns=['EID', 'library', 'file_ext', 'file_url'])\n",
     "    return df\n",
     "\n",
@@ -99,7 +98,7 @@
     "    hist_bpeak = search_peak_ids(bpeak_url, 'broadPeak.gz', 'histone')\n",
     "    # for some reason, DNase Hotspots limit the selection to 19 samples\n",
     "    #dnase_hspot = search_peak_ids(hotspot_url, 'fdr0.01.broad.bed.gz', 'DNase')\n",
-    "    css = search_segment_ids(seg_url, 'dense.bed.gz')\n",
+    "    css = search_segment_ids(seg_url, 'segments.bed')\n",
     "        \n",
     "    shared_eids = set(expression['EID'].tolist())\n",
     "    for data in [hist_npeak, dnase_npeak, hist_bpeak, css]:\n",
@@ -141,8 +140,12 @@
     "                    load_log.append([row.EID, row.library, src_url, trg_file])\n",
     "                    if not os.path.isfile(trg_path):\n",
     "                        resp = req.get(src_url)\n",
-    "                        with open(trg_path, 'wb') as dump:\n",
-    "                            dump.write(resp.content)\n",
+    "                        if 'segments' in trg_file:\n",
+    "                            with open(trg_path, 'w') as dump:\n",
+    "                                dump.write(resp.text)\n",
+    "                        else:\n",
+    "                            with open(trg_path, 'wb') as dump:\n",
+    "                                dump.write(resp.content)\n",
     "    df_log = pd.DataFrame(load_log, columns=['EID', 'library', 'source', 'target'])\n",
     "    with pd.HDFStore(cache, 'a') as hdf:\n",
     "        hdf.put('load_log', df_log, format='table')\n",
@@ -192,7 +195,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
