ENH: minor update like chromosome filtering

--- a/notebooks/utils/make_gencode_bglist.ipynb
+++ b/notebooks/utils/make_gencode_bglist.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -17,6 +19,9 @@
     "# from all datasets, create a corresponding\n",
     "# list of \"available\" genes that can be used\n",
     "# as custom background in GeneTrail\n",
+    "\n",
+    "# additionally, create list of housekeeping genes\n",
+    "# used for THOR differential analysis\n",
     "\n",
     "# the processed DESeq2 output files are already\n",
     "# filtered in the right way, just merge two\n",
@@ -52,7 +57,44 @@
     "tsv_out = os.path.join(ref_folder, bglist + '.tsv')\n",
     "\n",
     "genes.to_csv(tsv_out, sep='\\t', header=False, index=False,\n",
-    "             columns=['name'])\n"
+    "             columns=['name'])\n",
+    "\n",
+    "\n",
+    "           \n",
+    "if os.path.isfile(tsv_out):\n",
+    "    # for housekeeping genes, use complete locus\n",
+    "    # for promoter marks\n",
+    "    input_diff = os.path.join(input_folder, 'deseq2_He_vs_Mo_diff_locus.bed')\n",
+    "    input_stable = os.path.join(input_folder, 'deseq2_He_vs_Mo_stable_locus.bed')\n",
+    "    \n",
+    "    deg = pd.read_csv(input_diff, sep='\\t', header=0)\n",
+    "    seg = pd.read_csv(input_stable, sep='\\t', header=0)\n",
+    "\n",
+    "    genes = pd.concat([deg, seg], axis=0, ignore_index=False)\n",
+    "\n",
+    "    assert genes['name'].size == genes['name'].unique().size, 'Gene sets not disjoint'\n",
+    "\n",
+    "    genes['ens_id'] = genes['name'].str.extract('(?P<ENS>\\w+)', expand=False)\n",
+    "    genes['name'] = genes['ens_id']\n",
+    "    genes['score'] = genes['end'] - genes['start']\n",
+    "    genes['score'] = genes['score'].clip(lower=0, upper=1000, inplace=False)\n",
+    "    genes.sort_values(by=['#chrom', 'start', 'end'], inplace=True)\n",
+    "    \n",
+    "    hk_genes_file = os.path.join(ref_folder,\n",
+    "                                 'raw',\n",
+    "                                 'She_2009_BMCGen_10-269_AddFile1_12864_2008_2153_MOESM1_ESM.xls')\n",
+    "    \n",
+    "    hkgenes = pd.read_excel(hk_genes_file, skiprows=1)\n",
+    "    known_genes = genes.loc[genes['symbol'].isin(hkgenes['Gene Symbol']), :].copy()    \n",
+    "    \n",
+    "    hklist = os.path.join(ref_folder, 'gencode_v21_hklist_She2009.bed')\n",
+    "    known_genes.to_csv(hklist, sep='\\t', header=True, index=False,\n",
+    "                       columns=['#chrom', 'start', 'end', 'name', 'score', 'strand', 'symbol'])\n",
+    "    \n",
+    "    hklist = os.path.join(ref_folder, 'gencode_v21_hklist_She2009.tsv')\n",
+    "    known_genes.to_csv(hklist, sep='\\t', header=False, index=False,\n",
+    "                       columns=['name'])\n",
+    "    "
    ]
   }
  ],
