--- a/notebooks/utils/norm_ensregbuild.ipynb
+++ b/notebooks/utils/norm_ensregbuild.ipynb
@@ -2,30 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import os as os\n",
+    "import re as re\n",
     "import gzip as gz\n",
     "\n",
     "folder = '/TL/deep/fhgfs/projects/pebert/thesis/projects/statediff/references'\n",
     "\n",
     "inputfile = os.path.join(folder, 'EnsRB_v78_hg38_multi.gff.gz')\n",
-    "outputfile = os.path.join(folder, 'EnsRB_v78_hg38_multi.bed')\n",
+    "outputfile = os.path.join(folder, 'EnsRB_v78_hg38_multi_1-22X.bed')\n",
     "\n",
     "feat_map = {'TF_binding_site': 'tfbs', 'enhancer': 'enh',\n",
     "            'CTCF_binding_site': 'ctcf', 'open_chromatin_region': 'open',\n",
     "            'promoter': 'prom', 'promoter_flanking_region': 'flank'}\n",
     "\n",
+    "chrom_re = re.compile('chr[0-9X]+(\\s|$)')\n",
     "buffer = []\n",
     "with gz.open(inputfile, 'rt') as gff:\n",
     "    for line in gff:\n",
     "        if line:\n",
     "            parts = line.split(maxsplit=8)\n",
     "            chrom, start, end, regtype = parts[0], parts[3], parts[4], parts[2]\n",
-    "            if not chrom.startswith('chr'):\n",
+    "            mobj = chrom_re.match(chrom)\n",
+    "            if mobj is None:\n",
     "                continue\n",
     "            regtype = feat_map[regtype]\n",
     "            regid = 'noid'\n",
@@ -65,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
