ENH: corrected path for diss output; added notebook fig 4

--- a/notebooks/plotting/active/plot_compare_repscores.ipynb
+++ b/notebooks/plotting/active/plot_compare_repscores.ipynb
@@ -72,13 +72,12 @@
     "isect_root = os.path.join(fhgfs_base, 'bedtools', 'deep', 'isect_raw_self')\n",
     "\n",
     "base_out = '/TL/deep-external01/nobackup/pebert/cloudshare/mpiinf/phd/chapter_projects/statediff'\n",
-    "diss_out = '/home/pebert/work/code/mpggit/dissertation/Figures/diffchrom'\n",
     "tex_file = os.path.join(base_out, 'supplement', 'supp_table_SX_repcorr.tex')\n",
     "\n",
     "fig_supp = os.path.join(base_out, 'figures', 'pub', 'supp')\n",
     "fig_main = os.path.join(base_out, 'figures', 'pub', 'main')\n",
     "fig_collect = os.path.join(base_out, 'figures', 'pub', 'collection')\n",
-    "\n",
+    "fig_diss = '/home/pebert/work/code/mpggit/dissertation/Figures/diffchrom'\n",
     "\n",
     "def collect_replicate_overlap(ovl_folder, cache_file):\n",
     "    \n",
@@ -314,7 +313,7 @@
     "            if save_figures:\n",
     "                outname = 'fig_{}_ex_repcons_{}_{}'.format(fkey, seg, score)\n",
     "                if diss_version:\n",
-    "                    outfolder = diss_out\n",
+    "                    outfolder = fig_diss\n",
     "                else:\n",
     "                    outfolder = fig_main\n",
     "                \n",
