--- a/notebooks/plotting/active/plot_gumbel-fit_ka-params.ipynb
+++ b/notebooks/plotting/active/plot_gumbel-fit_ka-params.ipynb
@@ -68,11 +68,12 @@
     "dataset_root = os.path.join(fhgfs_base, 'sciddo', 'deep')\n",
     "\n",
     "base_out = '/TL/deep-external01/nobackup/pebert/cloudshare/mpiinf/phd/chapter_projects/statediff'\n",
-    "diss_out = '/home/pebert/work/code/mpggit/dissertation/Figures/diffchrom'\n",
     "\n",
     "fig_supp = os.path.join(base_out, 'figures', 'pub', 'supp')\n",
     "fig_main = os.path.join(base_out, 'figures', 'pub', 'main')\n",
     "fig_collect = os.path.join(base_out, 'figures', 'pub', 'collection')\n",
+    "\n",
+    "fig_diss = '/home/pebert/work/code/mpggit/dissertation/Figures/diffchrom'\n",
     "\n",
     "\n",
     "def collect_block_maxima(root_path, cache_file):\n",
@@ -240,15 +241,15 @@
     "        if save_figures:\n",
     "            outname = 'fig_{}_gumbelfit_kaparams_{}_{}'.format(fk, seg, score)\n",
     "            if diss_version:\n",
-    "                subfolder = diss_out\n",
+    "                outfolder = fig_diss\n",
     "            else:\n",
-    "                subfolder = fig_main\n",
+    "                outfolder = fig_main\n",
     "            \n",
-    "            out_pdf = os.path.join(subfolder, outname + '.pdf')\n",
+    "            out_pdf = os.path.join(outfolder, outname + '.pdf')\n",
     "            fig.savefig(out_pdf, bbox_inches='tight', extra_artists=exart)\n",
     "            \n",
     "            if not diss_version:\n",
-    "                out_png = os.path.join(subfolder, outname + '.png')\n",
+    "                out_png = os.path.join(outfolder, outname + '.png')\n",
     "                fig.savefig(out_png, bbox_inches='tight', extra_artists=exart, dpi=resolution[res])\n",
     "            \n",
     "    return 0\n",
