ENH: added/updated all files; submitted status

--- a/notebooks/utils/norm_ensregbuild.ipynb
+++ b/notebooks/utils/norm_ensregbuild.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -13,12 +15,12 @@
     "\n",
     "folder = '/TL/deep/fhgfs/projects/pebert/thesis/projects/statediff/references'\n",
     "\n",
-    "inputfile = os.path.join(folder, 'EnsRB_v78_hg38_multi.gff.gz')\n",
+    "inputfile = os.path.join(folder, 'raw', 'EnsRB_v78_hg38_multi.gff.gz')\n",
     "outputfile = os.path.join(folder, 'EnsRB_v78_hg38_multi_1-22X.bed')\n",
     "\n",
-    "feat_map = {'TF_binding_site': 'tfbs', 'enhancer': 'enh',\n",
+    "feat_map = {'TF_binding_site': 'tfbs', 'enhancer': 'enhancer',\n",
     "            'CTCF_binding_site': 'ctcf', 'open_chromatin_region': 'open',\n",
-    "            'promoter': 'prom', 'promoter_flanking_region': 'flank'}\n",
+    "            'promoter': 'promoter', 'promoter_flanking_region': 'flanking'}\n",
     "\n",
     "chrom_re = re.compile('chr[0-9X]+(\\s|$)')\n",
     "buffer = []\n",
